# agda-forester

./: .gitignore  LICENSE  README.md  agda-forester-backend.cabal  agda-forester.cabal  build.sh  cabal.project  default.nix  flake.nix  macros.tree  proxy.toml  server.sh  shell.nix  test.agda  test2.agda  test3.agda
.github/workflows/: build.yml
app/: Main.hs
nix/: forester.nix  haskell-packages.nix  nixpkgs.nix
nix/Agda/: github.json
nix/ocaml-forester/: git.json  thunk.nix
nix/opam-nix/: github.json
src/: Backend.hs  Forester.hs
src/Forester/: Backend.hs  Base.hs  Data.hs  Forester.hs  Html.hs  Main.hs  Structured.hs
